[project]
name = "model-reponse-with-structer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.3.26",
    "langchain-openai>=0.3.24",
    "langchain[google-genai]>=0.3.26",
    "langgraph>=0.4.8",
    "python-dotenv>=1.1.0",
]
